--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "underscore": "^1.7.0",
     "express-session": "^1.8.2",
     "cookie-parser": "^1.3.3",
-    "express.io": "^1.1.13"
+    "express.io": "^1.1.13",
+    "firebase": "^1.1.0"
   }
 }
